# delAI

./: .gitignore  README.md  docker-compose.yml  requirements.txt  start-discord-bot.ps1  start-flask.ps1  start-streamlit.ps1
flask_chatbot_student_assistant/: .env.example  Dockerfile  activity_user.csv  app.py  calendar_manager.py  content_moderation.py  email_receiver.py  email_sender.py  group_creator.py  rag_utils.py  recommend_activity.py  requirements.txt
flask_chatbot_student_assistant/data/: teachers.json
flask_chatbot_student_assistant/data/group_links/: group_links.json
flask_chatbot_student_assistant/rag_database/: chunks.pkl  metadata.pkl
flask_chatbot_student_assitants/: app.py  requirements.txt  studentsAssistant.db
streamlit_interface/: Dockerfile  conversation_logger.py  long_term_memory.py  main.py  requirements.txt
students-assistant/: user_profiles.csv
students-assistant/appPackage/: manifest.json
students-assistant/src/: conversation_logger.py  long_term_memory.py  main.py  rag_utils.py  user_context.py
students-assistant/team_dockerscript/: Dockerfile
students-assitants/: Dockerfile  README.md  pyproject.toml  requirements.txt  teamsapp.local.yml  teamsapp.testtool.yml  teamsapp.yml
students-assitants/infra/: azure.bicep  azure.parameters.json
students-assitants/src/: main.py
